--- a/Convertisseur/conertisseur.html
+++ b/Convertisseur/conertisseur.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+</head>
+<body>
 <script>
 function convert(base,nombre) {
    if ((nombre/base) > 0) {
@@ -18,4 +23,7 @@ function convertir() {
 Base: <input type="text" id="base" value="3">
 Votre valeur: <input type="text" id="nombre" value="52">
 <input type=button value="Convertir" onClick="convertir()"><br>
-Résultat: <span id="resultat">(click "Convertir")</span>
+RÃ©sultat: <span id="resultat">(click "Convertir")</span>
+
+</body>
+</html>
